# gst-plugins-bad

./: Android.mk
ext/faad/: Android.mk
ext/neon/: Android.mk  Makefile.am
ext/rtmp/: Android.mk  Makefile.am  gstrtmpsrc.c
ext/soundtouch/: Android.mk  gstbpmdetect.cc  gstpitch.cc
gst/bayer/: Makefile.am
gst/h264parse/: gsth264parse.c
sys/fbdev/: gstfbdevsink.c
